@@ -1349,10 +1349,11 @@ _scroll_backward(WINDOW *window, int count, unsigned char key, int behaviour)
 	  
           if ((desired_top < 0) && (window->pagetop == 0))
             {
-              if (backward_move_node_structure (window, behaviour))
-	        info_beginning_of_node (window, 1, 0);
-	      else if (cursor_movement_scrolls_p)
+              if ((backward_move_node_structure (window, behaviour) == 0)
+                  && (cursor_movement_scrolls_p))
 		info_end_of_node (window, 1, 0);
+              window->point = (window->line_starts[window->pagetop]
+                               - window->node->contents);
               return;
             }
         }
@@ -1363,6 +1364,8 @@ _scroll_backward(WINDOW *window, int count, unsigned char key, int behaviour)
         desired_top = 0;
 
       set_window_pagetop (window, desired_top);
+      window->point = (window->line_starts[window->pagetop]
+                       - window->node->contents);
     }
 }
 
